<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPaczka"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:background="@drawable/btn_paczka"
        android:orientation="horizontal"
        android:text="@string/btnPaczkaText"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtJednostka"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/txtDlugaNazwaJednostki"
            android:textColor="@color/umk_czarny"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtAdresNazwa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/txtDlugiAdres"
            android:textColor="@color/umk_czarny"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txtGabaryt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/txtDlugaZawartosc"
            android:textColor="@color/umk_granatowy_100"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/txtStatus"
            android:textColor="@color/umk_czarny"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>